k8s/talos/apps/homepage/basicauth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homepage-basicauth
  namespace: homepage
spec:
  basicAuth:
    secret: homepage-basicauth
