k8s/talos/apps/homepage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  annotations:
    argocd.argoproj.io/sync-wave: "2"
