k8s/talos/apps/homepage/ciliumnetworkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: homepage-policy
  namespace: homepage
spec:
  endpointSelector:
    matchLabels:
      "k8s:app.kubernetes.io/name": homepage
      "k8s:app.kubernetes.io/instance": homepage
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            "k8s:app.kubernetes.io/instance": traefik-traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEntities:
        - host
        - health
